Use same css as video container & video to avoid shifting of preview

--- a/src/components/CameraPreview/CameraPreview.scss
+++ b/src/components/CameraPreview/CameraPreview.scss
@@ -1,11 +1,20 @@
 .camera-preview {
-  text-align: center;
+  // same css as video container;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
+  // same css as video object;
   &__image {
-    width: 100%;
-    @media (max-width:480px) {
-      height: 100vh;
-      width: auto;
-    }
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0px;
+    left: 0px;
   }
 }
